objects/vlocity_cmt__CustomFieldMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Vlocity Field Map custom setting holds the field mappings required to clone one object to another.</description>
    <fields>
        <fullName>vlocity_cmt__DestinationFieldName__c</fullName>
        <description>Destination Field Name</description>
        <inlineHelpText>Destination Field Name</inlineHelpText>
        <label>Destination Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DestinationSObjectType__c</fullName>
        <description>Destination SObject Type</description>
        <inlineHelpText>Destination SObject Type</inlineHelpText>
        <label>Destination SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceFieldName__c</fullName>
        <description>Source Field Name</description>
        <inlineHelpText>Source Field Name</inlineHelpText>
        <label>Source Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceFieldSObjectType__c</fullName>
        <description>This field will hold the relational field&apos;s sobject type</description>
        <inlineHelpText>This field will hold the relational field&apos;s sobject type</inlineHelpText>
        <label>Source Field SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceFieldType__c</fullName>
        <label>Source Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceSObjectType__c</fullName>
        <description>Source SObject Type</description>
        <inlineHelpText>Source SObject Type</inlineHelpText>
        <label>Source SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Field Map</label>
</CustomObject>